--- a/README.html
+++ b/README.html
@@ -1,20 +1,70 @@
 
       <html>
         <head>
-          <title>Birthday Calendar</title>
+          <title>Project README</title>
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <meta charset="UTF-8">
-          <script defer data-domain="your-domain.com" src="https://plausible.io/js/script.js"></script>
-        
         </head>
         <body>
           <div id='content'><h1 id="birthday-calendar">Birthday Calendar</h1>
-<h2 id="pages">Pages:</h2>
+<p>A Flutter application designed to track birthdays and other recurring significant events. The app allows you to manage events such as birthdays, anniversaries, holidays, and custom events with a wide range of features.</p>
+<h2 id="features">Features</h2>
 <ul>
-<li><a href="privacy_policy.html">Privacy Policy</a></li>
-<li><a href="terms_and_conditions.html">Terms and Conditions</a></li>
-<li><a href="README.html">Project README</a></li>
+<li><p><strong>Event Management:</strong> </p></li>
+<li><p>Add, edit, delete, and move events to the trash.</p></li>
+<li><p>Create folders to organize events.</p></li>
+<li><p>Customize event types: Birthday, Anniversary, Holiday, Death, or Custom.</p></li>
+<li><p>Set both the date and time for each event.</p></li>
+<li><p>Count down to events with precise tracking (down to the second).</p></li>
+<li><p><strong>Contact Integration:</strong> </p></li>
+<li><p>Link events to contacts and pull their profile photos.</p></li>
+<li><p>Import events from contacts directly.</p></li>
+<li><p><strong>Reminders and Notifications:</strong> </p></li>
+<li><p>Set reminders for events with flexible scheduling.</p></li>
+<li><p><strong>Sorting & Searching:</strong></p></li>
+<li><p>Sort events by relevance, name, age, zodiac, and event type.</p></li>
+<li><p>Search for events across all categories.</p></li>
+<li><p><strong>User Preferences:</strong></p></li>
+<li><p>Customize theme, color palette, language, date format, and first day of the week.</p></li>
+<li><p>Hide avatars and display past events in the main list.</p></li>
+<li><p><strong>Backup & Restore:</strong> </p></li>
+<li><p>Backup your events and restore them as needed.</p></li>
 </ul>
+<h2 id="dependencies">Dependencies</h2>
+<p>This app uses several dependencies to provide advanced functionality, including local notifications, database management, and contact synchronization:</p>
+<ul>
+<li><p><strong>Google Services:</strong></p></li>
+<li><p><code>google_sign_in</code></p></li>
+<li><p><code>googleapis</code></p></li>
+<li><p><code>googleapis_auth</code></p></li>
+<li><p><strong>Database:</strong></p></li>
+<li><p><code>hive</code></p></li>
+<li><p><code>hive_flutter</code></p></li>
+<li><p><strong>File Management:</strong></p></li>
+<li><p><code>path_provider</code></p></li>
+<li><p><code>external_path</code></p></li>
+<li><p><code>file_picker</code></p></li>
+<li><p><strong>Image Handling:</strong></p></li>
+<li><p><code>image_picker</code></p></li>
+<li><p><code>flutter_image_converter</code></p></li>
+<li><p><code>flutter_image_compress</code></p></li>
+<li><p><strong>Notifications:</strong></p></li>
+<li><p><code>flutter_local_notifications</code></p></li>
+<li><p><code>timezone</code></p></li>
+<li><p><code>flutter_timezone</code></p></li>
+<li><p><strong>UI Components:</strong></p></li>
+<li><p><code>table_calendar</code></p></li>
+<li><p><code>flutter_switch</code></p></li>
+<li><p><code>flutter_staggered_grid_view</code></p></li>
+<li><p><code>shimmer_animation</code></p></li>
+<li><p><code>confetti</code></p></li>
+<li><p><strong>Utility Libraries:</strong></p></li>
+<li><p><code>easy_localization</code></p></li>
+<li><p><code>permission_handler</code></p></li>
+<li><p><code>url_launcher</code></p></li>
+<li><p><code>app_settings</code></p></li>
+</ul>
+<p>For the full list of dependencies, check the <code>pubspec.yaml</code> file.</p>
           </div>
           <style type='text/css'>body {
     font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
