Update app name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
           <title>Birthday Calendar</title>
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <meta charset="UTF-8">
-          <script defer data-domain="your-domain.com" src="https://plausible.io/js/script.js"></script>
+          <script defer data-domain="armaroscode.github.io" src="https://plausible.io/js/script.js"></script>
         
         </head>
         <body>
