--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -18,9 +18,9 @@
 <ul>
 <li><p><strong>Account</strong> means a unique account created for You to access our Service or parts of our Service.</p></li>
 <li><p><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</p></li>
-<li><p><strong>Application</strong> refers to  Birthdays Calendar, the software program provided by the Company.</p></li>
+<li><p><strong>Application</strong> refers to  Birthday Calendar, the software program provided by the Company.</p></li>
 
-<li><p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to  Birthdays Calendar.</p></li>
+<li><p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to  Birthday Calendar.</p></li>
 
 <li><p><strong>Country</strong> refers to:  Ukraine</p></li>
 <li><p><strong>Device</strong> means any device that can access the Service such as a computer, a cellphone or a digital tablet.</p></li>
