--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -15,11 +15,11 @@
 <h3 id="definitions">Definitions</h3>
 <p>For the purposes of these Terms and Conditions:</p>
 <ul>
-<li><p><strong>Application</strong> means the software program provided by the Company downloaded by You on any electronic device, named  Birthdays Calendar</p></li>
+<li><p><strong>Application</strong> means the software program provided by the Company downloaded by You on any electronic device, named  Birthday Calendar</p></li>
 <li><p><strong>Application Store</strong> means the digital distribution service operated and developed by Apple Inc. (Apple App Store) or Google Inc. (Google Play Store) in which the Application has been downloaded.</p></li>
 <li><p><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</p></li>
 <li><p><strong>Country</strong> refers to:  Ukraine</p></li>
-<li><p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to  Birthdays Calendar.</p></li>
+<li><p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to  Birthday Calendar.</p></li>
 <li><p><strong>Device</strong> means any device that can access the Service such as a computer, a cellphone or a digital tablet.</p></li>
 
 
